<resources>
    <string name="app_name">NewBase</string>
    <string name="app_logo">شعار التطبيق</string>
    <string name="login_title">تسجيل الدخول</string>
    <string name="email_hint">البريد الإلكتروني</string>
    <string name="password_hint">كلمة المرور</string>
    <string name="login_button">تسجيل الدخول</string>
    <string name="forgot_password_button">هل نسيت كلمة المرور؟</string>
    <string name="no_account_text">ليس لديك حساب؟</string>
    <string name="register_button">التسجيل</string>
    <string name="logging_in">جاري تسجيل الدخول...</string>
    <string name="login_success">تم تسجيل الدخول بنجاح!</string>
    <string name="logging_out">جاري تسجيل الخروج...</string>
    <string name="register_title">إنشاء حساب جديد</string>
    <string name="username_hint">اسم المستخدم</string>
    <string name="confirm_password_hint">تأكيد كلمة المرور</string>
    <string name="error_empty_confirm_password">تأكيد كلمة المرور مطلوب</string>
    <string name="error_empty_phone">رقم الهاتف مطلوب</string>
    <string name="error_invalid_phone">رقم هاتف غير صالح للبلد المحدد</string>
    <string name="registering">جاري إنشاء الحساب...</string>
    <string name="registration_success">تم إنشاء الحساب بنجاح!</string>
    <string name="error_passwords_not_match">كلمتا المرور غير متطابقتين.</string>
    <string name="error_empty_username">اسم المستخدم لا يمكن أن يكون فارغًا.</string>
    <string name="error_registration_failed">فشل إنشاء الحساب. يرجى المحاولة لاحقًا.</string>
    <string name="have_account_text">هل لديك حساب بالفعل؟</string>
    <string name="phone_hint">رقم الهاتف</string>
    <string name="error_short_password">كلمة المرور قصيرة جداً (6 أحرف على الأقل)</string>
    <string name="forgot_password_title">استعادة كلمة المرور</string>
    <string name="reset_password_button">إعادة تعيين كلمة المرور</string>
    <string name="password_reset_success">تم إرسال تعليمات إعادة تعيين كلمة المرور إلى بريدك الإلكتروني.</string>
    <string name="sending_reset_email">جاري إرسال البريد الإلكتروني...</string>
    <string name="error_password_reset_failed">فشل إرسال طلب إعادة تعيين كلمة المرور.</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_notifications">الإشعارات</string>
    <string name="title_profile">الملف الشخصي</string>
    <string name="title_settings">الإعدادات</string>
    <string name="error_invalid_email">البريد الإلكتروني غير صالح.</string>
    <string name="error_empty_password">كلمة المرور لا يمكن أن تكون فارغة.</string>
    <string name="error_login_failed">فشل تسجيل الدخول. يرجى التحقق من بياناتك.</string>
    <string name="prompt_select_country">اختر الدولة</string>
    <string name="error_empty_country_selection">الرجاء اختيار الدولة</string>
    <string name="error_invalid_phone_length">يجب أن يتكون رقم الهاتف من %d أرقام.</string>
    <string name="error_invalid_phone_digits_only">يجب أن يحتوي رقم الهاتف على أرقام فقط.</string>
    <string name="country_afghanistan">أفغانستان</string>
    <string name="country_albania">ألبانيا</string>
    <string name="country_algeria">الجزائر</string>
    <string name="country_andorra">أندورا</string>
    <string name="country_angola">أنجولا</string>
    <string name="country_antigua_and_barbuda">أنتيغوا وباربودا</string>
    <string name="country_argentina">الأرجنتين</string>
    <string name="country_armenia">أرمينيا</string>
    <string name="country_australia">أستراليا</string>
    <string name="country_austria">النمسا</string>
    <string name="country_azerbaijan">أذربيجان</string>
    <string name="country_bahamas">جزر البهاما</string>
    <string name="country_bahrain">البحرين</string>
    <string name="country_bangladesh">بنجلاديش</string>
    <string name="country_barbados">بربادوس</string>
    <string name="country_belarus">روسيا البيضاء</string>
    <string name="country_belgium">بلجيكا</string>
    <string name="country_belize">بليز</string>
    <string name="country_benin">بنين</string>
    <string name="country_bhutan">بوتان</string>
    <string name="country_bolivia">بوليفيا</string>
    <string name="country_bosnia_and_herzegovina">البوسنة والهرسك</string>
    <string name="country_botswana">بوتسوانا</string>
    <string name="country_brazil">البرازيل</string>
    <string name="country_brunei">بروناي</string>
    <string name="country_bulgaria">بلغاريا</string>
    <string name="country_burkina_faso">بوركينا فاسو</string>
    <string name="country_burundi">بوروندي</string>
    <string name="country_cabo_verde">الرأس الأخضر</string>
    <string name="country_cambodia">كمبوديا</string>
    <string name="country_cameroon">الكاميرون</string>
    <string name="country_canada">كندا</string>
    <string name="country_central_african_republic">جمهورية إفريقيا الوسطى</string>
    <string name="country_chad">تشاد</string>
    <string name="country_chile">تشيلي</string>
    <string name="country_china">الصين</string>
    <string name="country_colombia">كولومبيا</string>
    <string name="country_comoros">جزر القمر</string>
    <string name="country_congo_dr">جمهورية الكونغو الديمقراطية</string>
    <string name="country_congo_republic">جمهورية الكونغو</string>
    <string name="country_costa_rica">كوستاريكا</string>
    <string name="country_cote_divoire">ساحل العاج</string>
    <string name="country_croatia">كرواتيا</string>
    <string name="country_cuba">كوبا</string>
    <string name="country_cyprus">قبرص</string>
    <string name="country_czech_republic">جمهورية التشيك</string>
    <string name="country_denmark">الدنمارك</string>
    <string name="country_djibouti">جيبوتي</string>
    <string name="country_dominica">دومينيكا</string>
    <string name="country_dominican_republic">جمهورية الدومينيكان</string>
    <string name="country_ecuador">الإكوادور</string>
    <string name="country_egypt">مصر</string>
    <string name="country_el_salvador">السلفادور</string>
    <string name="country_equatorial_guinea">غينيا الاستوائية</string>
    <string name="country_eritrea">إريتريا</string>
    <string name="country_estonia">إستونيا</string>
    <string name="country_eswatini">إسواتيني</string>
    <string name="country_ethiopia">إثيوبيا</string>
    <string name="country_fiji">فيجي</string>
    <string name="country_finland">فنلندا</string>
    <string name="country_france">فرنسا</string>
    <string name="country_gabon">الجابون</string>
    <string name="country_gambia">غامبيا</string>
    <string name="country_georgia">جورجيا</string>
    <string name="country_germany">ألمانيا</string>
    <string name="country_ghana">غانا</string>
    <string name="country_greece">اليونان</string>
    <string name="country_grenada">غرينادا</string>
    <string name="country_guatemala">غواتيمالا</string>
    <string name="country_guinea">غينيا</string>
    <string name="country_guinea_bissau">غينيا بيساو</string>
    <string name="country_guyana">غيانا</string>
    <string name="country_haiti">هايتي</string>
    <string name="country_honduras">هندوراس</string>
    <string name="country_hungary">المجر</string>
    <string name="country_iceland">أيسلندا</string>
    <string name="country_india">الهند</string>
    <string name="country_indonesia">إندونيسيا</string>
    <string name="country_iran">إيران</string>
    <string name="country_iraq">العراق</string>
    <string name="country_ireland">أيرلندا</string>
    <string name="country_israel">إسرائيل</string>
    <string name="country_italy">إيطاليا</string>
    <string name="country_jamaica">جامايكا</string>
    <string name="country_japan">اليابان</string>
    <string name="country_jordan">المملكة الأردنية الهاشمية</string>
    <string name="country_kazakhstan">كازاخستان</string>
    <string name="country_kenya">كينيا</string>
    <string name="country_kiribati">كيريباتي</string>
    <string name="country_korea_north">كوريا الشمالية</string>
    <string name="country_korea_south">كوريا الجنوبية</string>
    <string name="country_kosovo">كوسوفو</string>
    <string name="country_kuwait">الكويت</string>
    <string name="country_kyrgyzstan">قيرغيزستان</string>
    <string name="country_laos">لاوس</string>
    <string name="country_latvia">لاتفيا</string>
    <string name="country_lebanon">لبنان</string>
    <string name="country_lesotho">ليسوتو</string>
    <string name="country_liberia">ليبيريا</string>
    <string name="country_libya">ليبيا</string>
    <string name="country_liechtenstein">ليختنشتاين</string>
    <string name="country_lithuania">ليتوانيا</string>
    <string name="country_luxembourg">لوكسمبورغ</string>
    <string name="country_madagascar">مدغشقر</string>
    <string name="country_malawi">مالاوي</string>
    <string name="country_malaysia">ماليزيا</string>
    <string name="country_maldives">جزر المالديف</string>
    <string name="country_mali">مالي</string>
    <string name="country_malta">مالطا</string>
    <string name="country_marshall_islands">جزر مارشال</string>
    <string name="country_mauritania">موريتانيا</string>
    <string name="country_mauritius">موريشيوس</string>
    <string name="country_mexico">المكسيك</string>
    <string name="country_micronesia">ميكرونيزيا</string>
    <string name="country_moldova">مولدوفا</string>
    <string name="country_monaco">موناكو</string>
    <string name="country_mongolia">منغوليا</string>
    <string name="country_montenegro">الجبل الأسود</string>
    <string name="country_morocco">المغرب</string>
    <string name="country_mozambique">موزمبيق</string>
    <string name="country_myanmar">ميانمار</string>
    <string name="country_namibia">ناميبيا</string>
    <string name="country_nauru">ناورو</string>
    <string name="country_nepal">نيبال</string>
    <string name="country_netherlands">هولندا</string>
    <string name="country_new_zealand">نيوزيلندا</string>
    <string name="country_nicaragua">نيكاراغوا</string>
    <string name="country_niger">النيجر</string>
    <string name="country_nigeria">نيجيريا</string>
    <string name="country_north_macedonia">مقدونيا الشمالية</string>
    <string name="country_norway">النرويج</string>
    <string name="country_oman">عمان</string>
    <string name="country_pakistan">باكستان</string>
    <string name="country_palau">بالاو</string>
    <string name="country_palestine">فلسطين</string>
    <string name="country_panama">بنما</string>
    <string name="country_papua_new_guinea">بابوا غينيا الجديدة</string>
    <string name="country_paraguay">باراغواي</string>
    <string name="country_peru">بيرو</string>
    <string name="country_philippines">الفلبين</string>
    <string name="country_poland">بولندا</string>
    <string name="country_portugal">البرتغال</string>
    <string name="country_qatar">قطر</string>
    <string name="country_romania">رومانيا</string>
    <string name="country_russia">روسيا</string>
    <string name="country_rwanda">رواندا</string>
    <string name="country_saint_kitts_and_nevis">سانت كيتس ونيفيس</string>
    <string name="country_saint_lucia">سانت لوسيا</string>
    <string name="country_saint_vincent_and_the_grenadines">سانت فنسنت والغرينادين</string>
    <string name="country_samoa">ساموا</string>
    <string name="country_san_marino">سان مارينو</string>
    <string name="country_sao_tome_and_principe">ساو تومي وبرينسيبي</string>
    <string name="country_saudi_arabia">المملكة العربية السعودية</string>
    <string name="country_senegal">السنغال</string>
    <string name="country_serbia">صربيا</string>
    <string name="country_seychelles">سيشل</string>
    <string name="country_sierra_leone">سيراليون</string>
    <string name="country_singapore">سنغافورة</string>
    <string name="country_slovakia">سلوفاكيا</string>
    <string name="country_slovenia">سلوفينيا</string>
    <string name="country_solomon_islands">جزر سليمان</string>
    <string name="country_somalia">الصومال</string>
    <string name="country_south_africa">جنوب أفريقيا</string>
    <string name="country_south_sudan">جنوب السودان</string>
    <string name="country_spain">إسبانيا</string>
    <string name="country_sri_lanka">سريلانكا</string>
</resources>